--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 							</div>
 							<footer class="major">
 								<ul class="actions special">
-									<li><a href="#" class="button">Join Presale</a></li>
+									<li><a class="button primary" href="/template01/invest">Join Presale</a></li>
 								</ul>
 							</footer>
 							<div>
@@ -663,6 +663,7 @@
 		</body>
 
 	</html>
+
 
 
 
