--- a/index.html
+++ b/index.html
@@ -116,12 +116,12 @@
 						<span class="image fit main"><img src="images/pic033.jpg" alt="" /></span>
 						<div class="content">
 							<header>
-								<h2>Support Our Vision</h2>
-								<p>Your support helps us continue to work towards our vision of creating a positive impact in the world. Every donation, big or small, makes a difference. Thank you for your generosity!</p>
+								<h2>Be Part of the Future</h2>
+								<p>Join our exclusive presale and become an early supporter of Million Star Resort. Secure MST tokens at discounted rates, unlock premium benefits, and help shape the next generation of hospitality powered by blockchain.</p>
 							</header>
 							<!-- Wallet / Investment Form -->
 		
-
+			<p>By joining the presale today, you unlock up to 75% discount on MST tokens and secure your place in the future of luxury hospitality.</p>
 		   <!-- Actions -->
 		  <ul class="actions" style="margin-top:1rem;">
 			 <a id="investCta" class="button primary" href="/template01/invest">Join Presale</a>
@@ -663,6 +663,7 @@
 		</body>
 
 	</html>
+
 
 
 
