--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 						<div class="content">
 							<header>
 								<h2>Be Part of the Future</h2>
-								<p>Join our exclusive presale and become an early supporter of Million Star Resort. Secure MST tokens at discounted rates, unlock premium benefits, and help shape the next generation of hospitality powered by blockchain.</p>
+								<p>Join our exclusive presale and become an early supporter of Million Star Resort.</p>
 							</header>
 							<!-- Wallet / Investment Form -->
 		
@@ -663,6 +663,7 @@
 		</body>
 
 	</html>
+
 
 
 
