--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 							</header>
 							<p>Each cabin offers a mix of modern luxury and nature: glass ceilings for stargazing, private pools for relaxation, and locations chosen to inspire. The resort is more than a destination — it is a chance to live under a million stars.</p>
 							<ul class="actions">
-								<li><a href="#" class="button">View Whitepaper</a></li>
+								<li><a href="assets/pdf/MST_Whitepaper.pdf" class="button">View Whitepaper</a></li>
 							</ul>
 						</div>
 						<a href="#three" class="goto-next scrolly">Next</a>
@@ -103,7 +103,7 @@
 							</header>
 							<p>Each MST token equals one night stay in a double room, valid for five years and tradable anytime. Investors gain discounted access, while travelers secure unforgettable memories. Ownership NFTs bring a new way to invest in hospitality.</p>
 							<ul class="actions">
-								<li><a href="#" class="button">Learn More</a></li>
+								<li><a href="assets/pdf/MST_Whitepaper.pdf" class="button">Learn More</a></li>
 							</ul>
 						</div>
 						<a href="#four" class="goto-next scrolly">Next</a>
@@ -663,6 +663,7 @@
 		</body>
 
 	</html>
+
 
 
 
