--- a/index.html
+++ b/index.html
@@ -25,9 +25,10 @@
 			<li><a href="#two">Vision</a></li>
 		  <li><a href="#three">Tokenomics</a></li>
 		  <li><a href="#four">Ownership NFTs</a></li>
-		  <li><a href="#five">Presale</a></li>
+		  <li><a href="#five">Contact Form</a></li>
+			<li><a href="/template01/invest">PreSale</a></li>
 		  <li><a href="assets/pdf/MST_Whitepaper.pdf" class="button primary" download>Get Whitepaper</a></li>
-		  <li><a href="#invest">Invest</a></li>
+		  
 		</ul>
 	  </nav>
 	</header>
@@ -54,7 +55,7 @@
 									<div class="col-4 col-12-medium">
 										<header>
 											<h2>Million Star Resort</h2>
-											<p>A new way to experience hospitality and nature<</p>
+											<p>A new way to experience hospitality and nature</p>
 										</header>
 									</div>
 									<div class="col-4 col-12-medium">
@@ -663,6 +664,7 @@
 		</body>
 
 	</html>
+
 
 
 
