--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@
 		  <li><a href="#three">Tokenomics</a></li>
 		  <li><a href="#four">Ownership NFTs</a></li>
 		  <li><a href="#five">Contact Form</a></li>
-			<li><a href="/template01/invest">PreSale</a></li>
-		  <li><a href="assets/pdf/MST_Whitepaper.pdf" class="button primary" download>Get Whitepaper</a></li>
+			<li><a href="assets/pdf/MST_Whitepaper.pdf" class="button" download>Get Whitepaper</a></li>
+			<li><a href="/template01/invest" class="button primary" >Join PreSale</a></li>
+
 		  
 		</ul>
 	  </nav>
@@ -664,6 +665,7 @@
 		</body>
 
 	</html>
+
 
 
 
