--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 			<link rel="stylesheet" href="assets/css/main.css" />
 			<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 			<base href="/template01/">
+			<link rel="icon" href="images/favicon.ico" type="image/pic066.jpg">
+
 
 		</head>
 		<body class="is-preload landing">
@@ -665,6 +667,7 @@
 		</body>
 
 	</html>
+
 
 
 
