--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 			<link rel="stylesheet" href="assets/css/main.css" />
 			<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 			<base href="/template01/">
-			<link rel="icon" href="images/favicon.ico" type="image/pic033.jpg">
+			<link rel="icon" href="images/pic033.jpg" type="image/x-icon">
+
 
 
 		</head>
@@ -667,6 +668,7 @@
 		</body>
 
 	</html>
+
 
 
 
