--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 			<link rel="stylesheet" href="assets/css/main.css" />
 			<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 			<base href="/template01/">
-			<link rel="icon" href="images/pic033.jpg" type="image/x-icon">
+			<link rel="icon" type="image/png" href="images/favicon.png">
 
 
 
@@ -668,6 +668,7 @@
 		</body>
 
 	</html>
+
 
 
 
