--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
 			<link rel="stylesheet" href="assets/css/main.css" />
 			<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 			<base href="/template01/">
-			<link rel="icon" type="image/png" href="images/favicon.png">
+			<!-- Favicons -->
+			<link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32.png?v=2">
+			<link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16.png?v=2">
+			<link rel="apple-touch-icon" sizes="180x180" href="images/favicon-180.png?v=2">
+
 
 
 
@@ -668,6 +672,7 @@
 		</body>
 
 	</html>
+
 
 
 
