--- a/invest/index.html
+++ b/invest/index.html
@@ -94,6 +94,14 @@
     a.inline{ color:#9bd0ff; text-decoration:none; }
     a.inline:hover{ text-decoration:underline; }
   </style>
+
+  
+<!-- Favicons -->
+<link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32.png?v=2">
+<link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16.png?v=2">
+<link rel="apple-touch-icon" sizes="180x180" href="images/favicon-180.png?v=2">
+
+  
 </head>
 <body>
   <main class="container">
