--- a/index.html
+++ b/index.html
@@ -13,6 +13,22 @@
 			<link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16.png?v=2">
 			<link rel="apple-touch-icon" sizes="180x180" href="images/favicon-180.png?v=2">
 
+			<!-- Open Graph (used by WhatsApp, Facebook, Telegram, etc.) -->
+			<meta property="og:type" content="website">
+			<meta property="og:title" content="Million Stars Resort">
+			<meta property="og:description" content="Luxury cabins with stargazing ceilings, private pools, and tokenized stays.">
+			<meta property="og:url" content="https://danieljahan.github.io/template01/">
+			<meta property="og:image" content="https://danieljahan.github.io/template01/images/og-image.png">
+			<meta property="og:image:width" content="1200">
+			<meta property="og:image:height" content="630">
+			
+			<!-- Twitter Card (X) -->
+			<meta name="twitter:card" content="summary_large_image">
+			<meta name="twitter:title" content="Million Stars Resort">
+			<meta name="twitter:description" content="Luxury cabins with stargazing ceilings, private pools, and tokenized stays.">
+			<meta name="twitter:image" content="https://danieljahan.github.io/template01/images/og-image.png">
+			
+			
 
 
 
@@ -672,6 +688,7 @@
 		</body>
 
 	</html>
+
 
 
 
