--- a/invest/index.html
+++ b/invest/index.html
@@ -125,7 +125,7 @@
           </div>
           <div class="step" data-step="2">
             <div class="circle" aria-hidden="true">2</div>
-            <div class="label">Amount & Referral</div>
+            <div class="label">Amount</div>
           </div>
           <div class="step" data-step="3">
             <div class="circle" aria-hidden="true">3</div>
