--- a/index.html
+++ b/index.html
@@ -214,6 +214,7 @@
 													<!-- FAQ Section -->
 <section id="faq" class="wrapper style1 special fade-up">
   <div class="inner">
+	  <div class="box">
     <h2>FAQ</h2>
     <div class="faq-list">
 
@@ -281,7 +282,7 @@
           <p><code>0x6715A25da511a4909dFBFbAD906Aa41F444CfD7a</code></p>
         </div>
       </div>
-
+	</div>
     </div>
   </div>
 </section>				
@@ -773,6 +774,7 @@
 		</body>
 
 	</html>
+
 
 
 
