--- a/index.html
+++ b/index.html
@@ -215,7 +215,9 @@
 <section id="faq" class="wrapper style1 special fade-up">
   <div class="inner">
 	  <div class="box">
-    <h2>FAQ</h2>
+		  <header class="major">
+		    <h2>FAQ </h2>
+		 </header>	
     <div class="faq-list">
 
       <div class="faq-item box">
@@ -774,6 +776,7 @@
 		</body>
 
 	</html>
+
 
 
 
