--- a/index.html
+++ b/index.html
@@ -738,7 +738,7 @@
 		<ul class="icons">
 			<!-- Twitter -->
 			<li>
-				<a href="https://twitter.com/YourUsername" target="_blank" rel="noopener noreferrer" class="icon brands alt fa-twitter">
+				<a href="https://x.com/ResortStar14830?t=ly7OEyCX-TkvNa27gxDUBg&s=03" class="icon brands alt fa-twitter">
 					<span class="label">Twitter</span>
 				</a>
 			</li>
@@ -795,6 +795,7 @@
 		</body>
 
 	</html>
+
 
 
 
