--- a/index.html
+++ b/index.html
@@ -739,7 +739,7 @@
 			<!-- Twitter -->
 			<li>
 				<a href="https://x.com/ResortStar14830?t=ly7OEyCX-TkvNa27gxDUBg&s=03" class="icon brands alt fa-twitter">
-					<span class="label">Twitter</span>
+					<span class="label">X</span>
 				</a>
 			</li>
 
@@ -795,6 +795,7 @@
 		</body>
 
 	</html>
+
 
 
 
