--- a/index.html
+++ b/index.html
@@ -773,9 +773,10 @@
 
 			<!-- Email -->
 			<li>
-				<a href="mailto:your.email@example.com" class="icon solid alt fa-envelope">
-					<span class="label">Email</span>
+				<a href="mailto:millionstarsresort@gmail.com" class="icon solid alt fa-envelope">
+				  <span class="label">Email</span>
 				</a>
+
 			</li>
 		</ul>
 	</footer>
@@ -795,6 +796,7 @@
 		</body>
 
 	</html>
+
 
 
 
