--- a/index.html
+++ b/index.html
@@ -743,13 +743,6 @@
 				</a>
 			</li>
 
-			<!-- Facebook -->
-			<li>
-				<a href="https://www.facebook.com/YourUsername" target="_blank" rel="noopener noreferrer" class="icon brands alt fa-facebook-f">
-					<span class="label">Facebook</span>
-				</a>
-			</li>
-
 			<!-- LinkedIn -->
 			<li>
 				<a href="https://www.linkedin.com/in/YourUsername" target="_blank" rel="noopener noreferrer" class="icon brands alt fa-linkedin-in">
@@ -759,15 +752,8 @@
 
 			<!-- Instagram -->
 			<li>
-				<a href="https://www.instagram.com/YourUsername" target="_blank" rel="noopener noreferrer" class="icon brands alt fa-instagram">
+				<a href="https://www.instagram.com/millionstarsresort/" target="_blank" rel="noopener noreferrer" class="icon brands alt fa-instagram">
 					<span class="label">Instagram</span>
-				</a>
-			</li>
-
-			<!-- GitHub -->
-			<li>
-				<a href="https://github.com/YourUsername" target="_blank" rel="noopener noreferrer" class="icon brands alt fa-github">
-					<span class="label">GitHub</span>
 				</a>
 			</li>
 
@@ -796,6 +782,7 @@
 		</body>
 
 	</html>
+
 
 
 
