--- a/index.html
+++ b/index.html
@@ -738,8 +738,8 @@
 		<ul class="icons">
 			<!-- Twitter -->
 			<li>
-				<a href="https://x.com/ResortStar14830?t=ly7OEyCX-TkvNa27gxDUBg&s=03" class="icon brands alt fa-twitter">
-					<span class="label">X</span>
+				<a href="https://x.com/ResortStar14830?t=ly7OEyCX-TkvNa27gxDUBg&s=03" class="icon brands alt fa-x-twitter">
+				  <span class="label">X</span>
 				</a>
 			</li>
 
@@ -782,6 +782,7 @@
 		</body>
 
 	</html>
+
 
 
 
