--- a/index.html
+++ b/index.html
@@ -736,12 +736,17 @@
 				<!-- Footer -->
 					<footer id="footer">
 		<ul class="icons">
-			<!-- Twitter -->
+
+			<!-- X (Twitter) -->
 			<li>
-				<a href="https://x.com/ResortStar14830?t=ly7OEyCX-TkvNa27gxDUBg&s=03" class="icon brands alt fa-x-twitter">
-				  <span class="label">X</span>
-				</a>
+			  <a href="https://x.com/ResortStar14830?t=ly7OEyCX-TkvNa27gxDUBg&s=03" class="icon brands alt x-icon" aria-label="X (Twitter)">
+			    <svg viewBox="0 0 24 24" width="1em" height="1em" aria-hidden="true">
+			      <path d="M4 4 L20 20 M20 4 L4 20" stroke="currentColor" stroke-width="3" stroke-linecap="round" fill="none"/>
+			    </svg>
+			    <span class="label">X</span>
+			  </a>
 			</li>
+
 
 			<!-- LinkedIn -->
 			<li>
@@ -782,6 +787,7 @@
 		</body>
 
 	</html>
+
 
 
 
