--- a/index.html
+++ b/index.html
@@ -741,7 +741,7 @@
 			<!-- X (Twitter) -->
 			<li>
 			  <a href="https://x.com/ResortStar14830" target="_blank" aria-label="X (Twitter)">
-			    <svg viewBox="0 0 1200 1227" width="24" height="24" style="fill:currentColor;vertical-align:middle;">
+			   <svg viewBox="0 0 1200 1227" width="1em" height="1em" aria-hidden="true" style="fill:currentColor;color:#fff;">
 			      <path d="M713.6 545.4 1160 0H1057.3L667.5 468.1 343.4 0H0l468.7 684.1L0 1226.6h102.7l409.9-490.3 342.1 490.3h343.4L713.6 545.4ZM563.9 673.7l-47.5-67.6-378.7-537.2h162.8l305.9 434.7 47.5 67.6 400.4 569.5H892.6L563.9 673.7Z"/>
 			    </svg>
 			    <span class="label">X</span>
@@ -788,6 +788,7 @@
 		</body>
 
 	</html>
+
 
 
 
