--- a/invest/index.html
+++ b/invest/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Invest • Million Star Resort</title>
+  <title>Invest • Million Stars Resort</title>
   
   <!-- Self‑contained, cross‑OS styles (Windows, macOS, Android, iOS, Linux).
        Uses system fonts and pure CSS; no external dependencies. -->
@@ -108,7 +108,7 @@
     <div class="topbar" role="navigation" aria-label="Top">
       <a class="brand" href="/" aria-label="Back to Home">
         <span class="dot" aria-hidden="true"></span>
-        <span>Million Star Resort</span>
+        <span>Million Stars Resort</span>
       </a>
       <div class="toplinks">
         <a href="/">Home</a>
