--- a/invest/index.html
+++ b/invest/index.html
@@ -117,7 +117,7 @@
 
     <section class="card" aria-labelledby="investHeader">
       <div class="card-header">
-        <h1 id="investHeader" class="section-title">Invest in Million Star Resort</h1>
+        <h1 id="investHeader" class="section-title">Invest in Million Stars Resort</h1>
         <div class="stepper" aria-label="Checkout steps">
           <div class="step" data-step="1">
             <div class="circle" aria-hidden="true">1</div>
