--- a/invest/index.html
+++ b/invest/index.html
@@ -472,7 +472,7 @@
   // If your invest page is a FOLDER with index.html, keep 'invest/'
   // If it's a single file, change to 'invest.html'
   function buildInvestUrl(ref) {
-    const investPath = projectBase() + 'invest/';     // or 'invest.html'
+    const investPath = projectBase() + 'invest.html';     // or 'invest.html'
     const u = new URL(investPath, location.origin);
     if (ref) u.searchParams.set('ref', ref);
     return u.href;
