--- a/index.html
+++ b/index.html
@@ -66,6 +66,13 @@
 								</p>
 							</header>
 							<span class="image"><img src="images/pic011.jpg" alt="" /></span>
+
+
+								<div class="actions" style="margin-top:20px;">
+								  <a href="#invest" class="btn primary">Join Presale</a>
+								</div>
+
+							
 						</div>
 						<a href="#one" class="goto-next scrolly">Next</a>
 					</section>
@@ -877,6 +884,7 @@
 		</body>
 
 	</html>
+
 
 
 
