--- a/index.html
+++ b/index.html
@@ -66,11 +66,14 @@
 								</p>
 							</header>
 							<span class="image"><img src="images/pic011.jpg" alt="" /></span>
+								
+								<!-- Actions -->
+								<ul class="actions" style="margin-top:1rem;">
+								  <li>
+								    <a id="investCta" class="button primary" href="/template01/invest">Join Presale</a>
+								  </li>
+								</ul>
 
-
-								<div class="actions" style="margin-top:20px;">
-								  <a href="#invest" class="btn primary">Join Presale</a>
-								</div>
 
 							
 						</div>
@@ -884,6 +887,7 @@
 		</body>
 
 	</html>
+
 
 
 
