--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 			<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 			<link rel="stylesheet" href="assets/css/main.css" />
 			<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-			<base href="/template01/">
+	<!--		<base href="/template01/">
 			<!-- Favicons -->
 			<link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32.png?v=2">
 			<link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16.png?v=2">
@@ -887,6 +887,7 @@
 		</body>
 
 	</html>
+
 
 
 
