--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 		  <li><a href="#four">Ownership NFTs</a></li>
 		  <li><a href="#five">Contact Form</a></li>
 			<li><a href="assets/pdf/MST_Whitepaper.pdf" class="button" download>Get Whitepaper</a></li>
-			<li><a href="/template01/invest" class="button primary" >Join PreSale</a></li>
+			<li><a href="/invest" class="button primary" >Join PreSale</a></li>
 
 		  
 		</ul>
@@ -70,7 +70,7 @@
 								<!-- Actions -->
 								<ul class="actions" style="margin-top:1rem;">
 								  <li>
-								    <a id="investCta" class="button primary" href="/template01/invest">Join Presale</a>
+								    <a id="investCta" class="button primary" href="/invest">Join Presale</a>
 								  </li>
 								</ul>
 
@@ -159,7 +159,7 @@
 			<p>By joining the presale today, you unlock up to 75% discount on MST tokens and secure your place in the future of luxury hospitality.</p>
 		   <!-- Actions -->
 		  <ul class="actions" style="margin-top:1rem;">
-			 <a id="investCta" class="button primary" href="/template01/invest">Join Presale</a>
+			 <a id="investCta" class="button primary" href="/invest">Join Presale</a>
 			  
 		  </ul>
 		  </ul>
@@ -214,7 +214,7 @@
 							</div>
 							<footer class="major">
 								<ul class="actions special">
-									<li><a class="button primary" href="/template01/invest">Join Presale</a></li>
+									<li><a class="button primary" href="/invest">Join Presale</a></li>
 								</ul>
 							</footer>
 							<div>
@@ -887,6 +887,7 @@
 		</body>
 
 	</html>
+
 
 
 
