--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 				<!-- Header -->
 	<header id="header">
-	  <h1 id="logo"><a href="#banner">Million Star Resort</a></h1>
+	  <h1 id="logo"><a href="#banner"> Resort</a></h1>
 	  <nav id="nav">
 		<ul>
 
@@ -62,7 +62,7 @@
 						<div class="content">
 							<header>
 								<h2>The future of hospitality</h2>
-								<p>Not just promises, but real nights under a million stars.<br />
+								<p>Not just promises, but real nights under a s.<br />
 								</p>
 							</header>
 							<span class="image"><img src="images/pic011.jpg" alt="" /></span>
@@ -88,7 +88,7 @@
 								<div class="row">
 									<div class="col-4 col-12-medium">
 										<header>
-											<h2>Million Star Resort</h2>
+											<h2> Resort</h2>
 											<p>A new way to experience hospitality and nature</p>
 										</header>
 									</div>
@@ -104,7 +104,7 @@
 											and tradable on blockchain. Investors and travelers gain
 											flexibility and value, while supporting a new vision of
 											hospitality. Your token is your key to unforgettable nights
-											under a million stars.</p>
+											under a s.</p>
 									</div>
 								</div>
 							</div>
@@ -117,7 +117,7 @@
 						<span class="image fit main"><img src="images/pic033.jpg" alt="" /></span>
 						<div class="content">
 							<header>
-								<h2>Why Million Star Resort?</h2>
+								<h2>Why Million Stars Resort?</h2>
 								<p>A resort designed to create stories, not just stays</p>
 							</header>
 							<p>Each cabin offers a mix of modern luxury and nature: glass ceilings for stargazing, private pools for relaxation, and locations chosen to inspire. The resort is more than a destination — it is a chance to live under a million stars.</p>
@@ -152,7 +152,7 @@
 						<div class="content">
 							<header>
 								<h2>Be Part of the Future</h2>
-								<p>Join our exclusive presale and become an early supporter of Million Star Resort.</p>
+								<p>Join our exclusive presale and become an early supporter of Million Stars Resort.</p>
 							</header>
 							<!-- Wallet / Investment Form -->
 		
@@ -175,7 +175,7 @@
 						<div class="container">
 						<div class="box">
 							<header class="major">
-								<h2>Why Choose Million Star Resort?</h2>
+								<h2>Why Choose Million Stars Resort?</h2>
 								<p>A unique blend of nature, luxury, and blockchain innovation</p>
 							</header>		
 							<div class="box alt">
@@ -235,7 +235,7 @@
           What is MST Token? <span class="faq-toggle">+</span>
         </button>
         <div class="faq-answer">
-          <p>MST is an <strong>ERC20 token</strong> called <strong>Million Star Token</strong> with a maximum supply of <strong>500,000,000 MST</strong>.</p>
+          <p>MST is an <strong>ERC20 token</strong> called <strong>Million Stars Token</strong> with a maximum supply of <strong>500,000,000 MST</strong>.</p>
         </div>
       </div>
 
@@ -887,6 +887,7 @@
 		</body>
 
 	</html>
+
 
 
 
