--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 				<!-- Header -->
 	<header id="header">
-	  <h1 id="logo"><a href="#banner"> Resort</a></h1>
+	  <h1 id="logo"><a href="#banner"> Million Stars Resort</a></h1>
 	  <nav id="nav">
 		<ul>
 
@@ -88,7 +88,7 @@
 								<div class="row">
 									<div class="col-4 col-12-medium">
 										<header>
-											<h2> Resort</h2>
+											<h2> Million Stars Resort</h2>
 											<p>A new way to experience hospitality and nature</p>
 										</header>
 									</div>
@@ -887,6 +887,7 @@
 		</body>
 
 	</html>
+
 
 
 
